--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="image/pic3.jpg" alt="profile" />
         </div>
         <div class="name">
-          <h1>Sibu Jais</h1>
+          <h1>Sibu Jaiswal</h1>
           <img src="image/verify.png" alt="verify" />
         </div>
         <span>@Jais</span>
