some changes in html

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         </div>
         <!-- Box2 -->
         <div class="box">
-          <h3>10.4k</h3>
+          <h3>11.9kk</h3>
           <span>Followers</span>
         </div>
         <!-- Box3 -->
         <div class="box">
-          <h3>500</h3>
+          <h3>689</h3>
           <span>Followings</span>
         </div>
       </div>
@@ -62,7 +62,7 @@
           <span class="icon">
             <i class="ri-notification-4-line"></i>
           </span>
-          Notification
+          Notifications
         </a>
         <a href="#">
           <span class="icon">
