--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
           <img src="image/pic3.jpg" alt="profile" />
         </div>
         <div class="name">
-<<<<<<< HEAD
-          <h1>Rani Jais</h1>
-=======
-          <h1>Sibu Jaiswal</h1>
->>>>>>> b4be19222097e33e4dfd969841f33b5ddd7c7eec
+
+          <!-- <h1>Rani Jais</h1> -->
+          <h3>Sibu Jaiswal</h3>
           <img src="image/verify.png" alt="verify" />
         </div>
         <span>@Jais</span>
