--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
           <img src="image/profile10.jpg" alt="profile" />
         </div>
       </div>
-      <div class="feed">
+      <!-- <div class="feed">
         <h1>Feed</h1>
         <div class="feed-text">
           <h2>Latest</h2>
           <span>Popular</span>
         </div>
-      </div>
+      </div> -->
 
       <div class="main-post">
         <!-- Box1 -->
